# team-10-backend

./: .csharpierrc.json  .gitignore  MojeWidelo_WebApi.sln  README.md  README_dev.md
.config/: dotnet-tools.json
.github/workflows/: csharpier.yml  deploy_on_vm.yml
Contracts/: Contracts.csproj  ICommentRepository.cs  IHistoryRepository.cs  IPlaylistRepository.cs  IReactionRepository.cs  IRepositoryBase.cs  IRepositoryWrapper.cs  ISubscriptionsRepository.cs  ITicketRepository.cs  IUsersRepository.cs  IVideoRepository.cs
Entities/: Entities.csproj
Entities/Data/: LoginDTO.cs  RegisterDTO.cs  UpdateUserDTO.cs  UserBaseDTO.cs  UserDTO.cs  VideoMetadataDTO.cs
Entities/DatabaseUtils/: DatabaseSettings.cs  IDatabaseSettings.cs
Entities/Enums/: PlaylistVisibility.cs  ProcessingProgress.cs  ReactionType.cs  SortingCriterion.cs  SortingType.cs  TicketStatus.cs  TicketTargetTypeDto.cs  UserType.cs  VideoVisibility.cs  (+1 more)
FuzzySearch/: FuzzySearch.csproj  StringComparisonExtension.cs
MojeWidelo_WebApi/: Dockerfile  MojeWidelo_WebApi.csproj  Program.cs  WeatherForecast.cs  appsettings.Production.json  appsettings.json
MojeWidelo_WebApi.UnitTests/: HashHelperTests.cs  MojeWidelo_WebApi.UnitTests.csproj  UsersControllerTests.cs  UsersRepositoryTests.cs  VideoRepositoryTests.cs
Repository/: CommentRepository.cs  HistoryRepository.cs  PlaylistRepository.cs  ReactionRepository.cs  Repository.csproj  RepositoryBase.cs  RepositoryWrapper.cs  SubscriptionsRepository.cs  TicketRepository.cs  UsersRepository.cs  VideoRepository.cs
mongo_scripts/: createWatchHistory.js  create_backup.sh  restore_backup.sh
recommendation_engine/: .env.development  .env.production  README.md  pyproject.toml
recommendation_engine/app/: const.py  main.py  models.py  recommendations.py  recommendations_parameters.py  recommendations_tests.ipynb
(+108 files in other folders)
