[tool.poetry]
name = "recommendation-engine"
version = "0.1.0"
description = ""
authors = ["MOJE WIDEŁO TEAM <prezes@mojewidelo.pl>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.scripts]
start = "app.main:main"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.95.2"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
