[tool.poetry]
name = "recommendation-engine"
version = "0.1.0"
description = ""
authors = ["MOJE WIDEŁO TEAM <prezes@mojewidelo.pl>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.scripts]
start = "app.main:main"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.95.2"}
numpy = "^1.24.3"
pymongo = "^4.3.3"
pandas = "^2.0.1"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = "^23.3.0"

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = "^23.3.0"
ipykernel = "^6.23.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
